syntax = "proto3";
package voting;
import "google/protobuf/timestamp.proto";

service VoterRegistration {
  rpc RegisterVoter(Voter) returns (Status);
  rpc UnRegisterVoter(Voter) returns (Status);
}

message Voter {
  string name = 1;
  string group = 2;
  bytes public_key = 3;
}

message VoterName {
  string name = 1;
}

message Status {
  int32 code = 1;
}

service eVoting {
  rpc PreAuth(VoterName) returns (Challenge);
  rpc Auth(AuthRequest) returns (AuthToken);
  rpc CreateElection(Election) returns (Status);
  rpc CastVote(Vote) returns (Status);
  rpc GetResult(ElectionName) returns (ElectionResult);
}

message Challenge {
  bytes value = 1;
}

message Response {
  bytes value = 1;
}

message AuthRequest {
  VoterName name = 1;
  Response response = 2;
}

message AuthToken {
  bytes value = 1;
}

message Election {
  string name = 1;
  string groups = 2;
  string choices = 3;
  google.protobuf.Timestamp end_date = 4;
  AuthToken token = 5;
}

message ElectionName {
  string name = 1;
}

message VoteCount {
  string choice_name = 1;
  int32 count = 2;
}

message ElectionResult {
  int32 status = 1;
  VoteCount count = 2;
}
